--- a/notebooks/NIQ_Task.ipynb
+++ b/notebooks/NIQ_Task.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "4130abd6",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
     }
    ],
    "source": [
-    "print(data.info())  # Check column types and missing values\n"
+    "print(data.info())  # Check column types and missing values"
    ]
   },
   {
