Fixed some typos

--- a/notebooks/03_XYZ_campaign_EDA.ipynb
+++ b/notebooks/03_XYZ_campaign_EDA.ipynb
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,8 @@
    "source": [
     "# Calculate weighted average exposure for purchasers vs non-purchasers\n",
     "purchase_by_channel_weighted = data.groupby('PURCHASE').apply(\n",
-    "    lambda x: x[media_channels].apply(lambda col: np.average(col, weights=x['WEIGHT'])), include_groups=False).T\n",
+    "    lambda x: x[media_channels].apply(\n",
+    "        lambda col: np.average(col, weights=x['WEIGHT'])), include_groups=False).T\n",
     "\n",
     "# Plot the weighted media exposure\n",
     "purchase_by_channel_weighted.plot(kind='bar')\n",
