--- a/notebooks/01_XYZ_campaign_data_cleaning.ipynb
+++ b/notebooks/01_XYZ_campaign_data_cleaning.ipynb
@@ -1310,7 +1310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ksbon\\AppData\\Local\\Temp\\ipykernel_22312\\1055437148.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\bokr4002\\AppData\\Local\\Temp\\1\\ipykernel_23644\\1055437148.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  socio_demos['NUMBER_OF_CHILDREN'] = socio_demos['NUMBER_OF_CHILDREN'].replace({'0': 0, '1 child': 1, '2 Children': 2, '3 Kinder': 3})\n"
      ]
     }
@@ -2632,6 +2632,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\bokr4002\\AppData\\Local\\Temp\\1\\ipykernel_23644\\1176887572.py:5: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  def save_dataframe(df, filename=\"file.csv\", directory=\"..\\data\", sep=\",\", index=False):\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -2689,7 +2699,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -2703,7 +2713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
