Incorporated MLFlow logging into the model tuning function; Added some more visualizations and gneral invesstigation of the way IsolationForrest works and the outputs it generates;

--- a/notebooks/04_XYZ_campaign_predictive_modeling.ipynb
+++ b/notebooks/04_XYZ_campaign_predictive_modeling.ipynb
@@ -9,10 +9,14 @@
     "# Imports\n",
     "import os\n",
     "import dill\n",
+    "import mlflow\n",
+    "import mlflow.sklearn\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns \n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from datetime import datetime\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -274,7 +278,7 @@
     "    'Random Forest Classifier': RandomForestClassifier(random_state=42),\n",
     "    'GradientBoostingClassifier': GradientBoostingClassifier(random_state=42),\n",
     "    'KNeighbors Classifier': KNeighborsClassifier(),\n",
-    "    'SVC': SVC(probability=True, random_state=42),\n",
+    "    'LinearSVC': LinearSVC(random_state=42),\n",
     "}"
    ]
   },
@@ -303,9 +307,9 @@
       "- CV F1 scores: 64.6% | 58.7% | 62.7% | 60.7% | 62.1%\n",
       "- CV mean: 61.8%\n",
       "\n",
-      "SVC:\n",
-      "- CV F1 scores: 66.2% | 61.8% | 65.5% | 64.5% | 66.9%\n",
-      "- CV mean: 65.0%\n",
+      "LinearSVC:\n",
+      "- CV F1 scores: 70.1% | 64.2% | 66.6% | 65.4% | 67.5%\n",
+      "- CV mean: 66.8%\n",
       "\n"
      ]
     }
@@ -347,7 +351,9 @@
     "\n",
     "**Grid Seach** makes tuning hyper parameters easy and streight forward. I want to set up a functio nthat will allow me to apply the search to multitude of models easily. Additionally, so far we have not accounted for the **sampel weights** provided in the dataset. Grid Search does support that functionality so let's start by setting up a function to make tuning all models easier and more streamlined.\n",
     "\n",
-    "As mentioned previously, the precission-recall tradeoff will be of vital importance so I will stick with F1 as the main socring matric for the grid search. I also want to be able to view the best performing hypeparameter settings and save the best model if desired. "
+    "As mentioned previously, the precission-recall tradeoff will be of vital importance so I will stick with F1 as the main socring matric for the grid search. I also want to be able to view the best performing hypeparameter settings and save the best model if desired. \n",
+    "\n",
+    "I will also incorporate **MLFlow** into the function for easy tracking of the model optimizations process."
    ]
   },
   {
@@ -356,47 +362,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set MLflow tracking directory to one level up (project root)\n",
+    "mlflow.set_tracking_uri(\"../mlruns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def tune_params(model, X_train, X_test, y_train, y_test, w_train, w_test, param_grid, scoring='f1'):\n",
-    "    # Initialize GridSearchCV\n",
-    "    grid_search = GridSearchCV(\n",
-    "        estimator=model,\n",
-    "        param_grid=param_grid,\n",
-    "        scoring=scoring, # ROC AUC as the evaluation metric\n",
-    "        cv=5,  # 5-fold cross-validation\n",
-    "        n_jobs=-1,  # Use all available processors\n",
-    "    )\n",
+    "    # Define a clear experiment name\n",
+    "    experiment_name = f\"Exp_{model.__class__.__name__}_{datetime.now().strftime('%Y-%m-%d_%H-%M-%S')}\"\n",
+    "    mlflow.set_experiment(experiment_name)  # Set experiment name explicitly\n",
     "\n",
-    "    # Fit the model using training data and sample weights\n",
-    "    grid_search.fit(\n",
-    "        X_train, \n",
-    "        y_train, \n",
-    "        sample_weight=w_train\n",
+    "    # Define a custom run name for easier tracking\n",
+    "    run_name = f\"{model.__class__.__name__}_Run_{datetime.now().strftime('%Y-%m-%d_%H-%M-%S')}\"\n",
+    "\n",
+    "    with mlflow.start_run(run_name=run_name):\n",
+    "        # Log basic model parameters\n",
+    "        mlflow.log_param(\"model_type\", model.__class__.__name__)\n",
+    "\n",
+    "        # Initialize GridSearchCV\n",
+    "        grid_search = GridSearchCV(\n",
+    "            estimator=model,\n",
+    "            param_grid=param_grid,\n",
+    "            scoring=scoring,\n",
+    "            cv=5,\n",
+    "            n_jobs=-1,\n",
     "        )\n",
     "\n",
-    "    # Get the best model from GridSearchCV\n",
-    "    best_model = grid_search.best_estimator_\n",
+    "        # Fit the model\n",
+    "        grid_search.fit(X_train, y_train, sample_weight=w_train)\n",
     "\n",
-    "    # Predict probabilities (probability of Purchase = 1) on test set\n",
-    "    y_pred = best_model.predict(X_test)\n",
-    "    # y_pred_proba = best_model.predict_proba(X_test)[:, 1]\n",
+    "        # Get the best model\n",
+    "        best_model = grid_search.best_estimator_\n",
     "\n",
-    "    # Evaluate model using weighted F1 Score\n",
-    "    weighted_f1 = f1_score(\n",
-    "        y_test, \n",
-    "        y_pred, \n",
-    "        sample_weight=w_test\n",
-    "        )\n",
-    "    print(\"----------------------------------------\")\n",
-    "    print(f\"Weighted F1 Score: {round(weighted_f1, 2)}\")\n",
-    "    print(\"----------------------------------------\")\n",
+    "        # Predict on test set and compute weighted F1 score\n",
+    "        y_pred = best_model.predict(X_test)\n",
+    "        weighted_f1 = f1_score(y_test, y_pred, sample_weight=w_test)\n",
     "\n",
-    "    # Display best hyperparameters\n",
-    "    print(\"Best Parameters\")\n",
-    "    for param, value in grid_search.best_params_.items():\n",
-    "        print(f\"{param}: {value}\")\n",
-    "    print(\"----------------------------------------\")\n",
+    "        # MLFlow Logging\n",
+    "        mlflow.log_metric(\"weighted_f1\", weighted_f1)  \n",
+    "        mlflow.log_params(grid_search.best_params_)  \n",
+    "        mlflow.sklearn.log_model(best_model, f\"Tuned_{model.__class__.__name__}\", input_example=X_train.iloc[:20])\n",
     "\n",
-    "    return best_model"
+    "        # Print results\n",
+    "        print(\"----------------------------------------\")\n",
+    "        print(f\"Weighted F1 Score: {round(weighted_f1, 2)}\")\n",
+    "        print(\"Best Parameters:\")\n",
+    "        for param, value in grid_search.best_params_.items():\n",
+    "            print(f\"{param}: {value}\")\n",
+    "        print(\"----------------------------------------\")\n",
+    "        \n",
+    "        return best_model"
    ]
   },
   {
@@ -410,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,20 +490,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "C:\\Users\\bokr4002\\AppData\\Local\\Temp\\1\\ipykernel_23052\\2068139862.py:1: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  def save_model(model, model_name, models_folder=\"..\\models\"):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def save_model(model, model_name, models_folder=\"..\\models\"):\n",
     "    \"\"\"\n",
@@ -522,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,17 +606,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/02/14 11:02:51 INFO mlflow.tracking.fluent: Experiment with name 'Exp_LogisticRegression_2025-02-14_11-02-51' does not exist. Creating a new experiment.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "----------------------------------------\n",
       "Weighted F1 Score: 0.63\n",
-      "----------------------------------------\n",
-      "Best Parameters\n",
+      "Best Parameters:\n",
       "C: 1\n",
       "max_iter: 50\n",
       "penalty: l1\n",
@@ -633,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -692,14 +707,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from: ..\\models\\3.2_best_rf.pkl\n"
+      "Unable to load model from: ..\\models\\3.2_best_rf.pkl. Error: [Errno 2] No such file or directory: '..\\\\models\\\\3.2_best_rf.pkl'\n"
      ]
     }
    ],
@@ -710,9 +725,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/02/14 11:03:28 INFO mlflow.tracking.fluent: Experiment with name 'Exp_RandomForestClassifier_2025-02-14_11-03-28' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "Weighted F1 Score: 0.65\n",
+      "Best Parameters:\n",
+      "max_depth: 5\n",
+      "max_features: sqrt\n",
+      "min_samples_leaf: 8\n",
+      "min_samples_split: 2\n",
+      "n_estimators: 400\n",
+      "----------------------------------------\n",
+      "Model saved to: ..\\models\\3.2_best_rf.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "if not best_rf:\n",
     "    \n",
@@ -743,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -826,14 +865,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from: ..\\models\\3.3_best_gb.pkl\n"
+      "Unable to load model from: ..\\models\\3.3_best_gb.pkl. Error: [Errno 2] No such file or directory: '..\\\\models\\\\3.3_best_gb.pkl'\n"
      ]
     }
    ],
@@ -843,9 +882,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/02/14 11:06:57 INFO mlflow.tracking.fluent: Experiment with name 'Exp_GradientBoostingClassifier_2025-02-14_11-06-57' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "Weighted F1 Score: 0.63\n",
+      "Best Parameters:\n",
+      "learning_rate: 0.1\n",
+      "max_depth: 2\n",
+      "min_samples_leaf: 5\n",
+      "min_samples_split: 5\n",
+      "n_estimators: 100\n",
+      "subsample: 0.8\n",
+      "----------------------------------------\n",
+      "Model saved to: ..\\models\\3.3_best_gb.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "if not best_gb:\n",
     "\n",
@@ -876,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -964,14 +1028,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from: ..\\models\\3.4_best_linear_svc.pkl\n"
+      "Unable to load model from: ..\\models\\3.4_best_linear_svc.pkl. Error: [Errno 2] No such file or directory: '..\\\\models\\\\3.4_best_linear_svc.pkl'\n"
      ]
     }
    ],
@@ -981,9 +1045,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/02/14 11:10:07 INFO mlflow.tracking.fluent: Experiment with name 'Exp_LinearSVC_2025-02-14_11-10-07' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "Weighted F1 Score: 0.66\n",
+      "Best Parameters:\n",
+      "C: 0.1\n",
+      "loss: squared_hinge\n",
+      "max_iter: 1000\n",
+      "----------------------------------------\n",
+      "Model saved to: ..\\models\\3.4_best_linear_svc.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "if not best_linear_svc:\n",
     "\n",
@@ -1012,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1090,7 +1176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
