Trying to make custom run_ids work with MLFlow but still not working properly;

--- a/notebooks/04_XYZ_campaign_predictive_modeling.ipynb
+++ b/notebooks/04_XYZ_campaign_predictive_modeling.ipynb
@@ -372,6 +372,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import uuid\n",
+    "\n",
+    "\n",
     "def tune_params(model, X_train, X_test, y_train, y_test, w_train, w_test, param_grid, scoring='f1'):\n",
     "    # Define a clear experiment name\n",
     "    experiment_name = f\"Exp_{model.__class__.__name__}_{datetime.now().strftime('%Y-%m-%d_%H-%M-%S')}\"\n",
@@ -379,6 +382,9 @@
     "\n",
     "    # Define a custom run name for easier tracking\n",
     "    run_name = f\"{model.__class__.__name__}_Run_{datetime.now().strftime('%Y-%m-%d_%H-%M-%S')}\"\n",
+    "\n",
+    "    # Generate a custom, human-readable run_id (with timestamp and random UUID for uniqueness)\n",
+    "    run_id = f\"{model.__class__.__name__}_{datetime.now().strftime('%Y-%m-%d_%H-%M-%S')}_{str(uuid.uuid4())[:8]}\"  # Truncated UUID for brevity\n",
     "\n",
     "    with mlflow.start_run(run_name=run_name):\n",
     "        # Log basic model parameters\n",
@@ -535,9 +541,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import dill\n",
-    "\n",
     "def load_model(model_name, models_folder=\"..\\\\models\"):\n",
     "    \"\"\"\n",
     "    Loads a model from the specified folder using dill.\n",
@@ -613,7 +616,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/02/14 11:02:51 INFO mlflow.tracking.fluent: Experiment with name 'Exp_LogisticRegression_2025-02-14_11-02-51' does not exist. Creating a new experiment.\n"
+      "2025/02/14 12:01:58 INFO mlflow.tracking.fluent: Experiment with name 'Exp_LogisticRegression_2025-02-14_12-01-58' does not exist. Creating a new experiment.\n"
      ]
     },
     {
@@ -714,7 +717,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unable to load model from: ..\\models\\3.2_best_rf.pkl. Error: [Errno 2] No such file or directory: '..\\\\models\\\\3.2_best_rf.pkl'\n"
+      "Model loaded from: ..\\models\\3.2_best_rf.pkl\n"
      ]
     }
    ],
@@ -727,31 +730,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/02/14 11:03:28 INFO mlflow.tracking.fluent: Experiment with name 'Exp_RandomForestClassifier_2025-02-14_11-03-28' does not exist. Creating a new experiment.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------\n",
-      "Weighted F1 Score: 0.65\n",
-      "Best Parameters:\n",
-      "max_depth: 5\n",
-      "max_features: sqrt\n",
-      "min_samples_leaf: 8\n",
-      "min_samples_split: 2\n",
-      "n_estimators: 400\n",
-      "----------------------------------------\n",
-      "Model saved to: ..\\models\\3.2_best_rf.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not best_rf:\n",
     "    \n",
@@ -872,7 +851,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unable to load model from: ..\\models\\3.3_best_gb.pkl. Error: [Errno 2] No such file or directory: '..\\\\models\\\\3.3_best_gb.pkl'\n"
+      "Model loaded from: ..\\models\\3.3_best_gb.pkl\n"
      ]
     }
    ],
@@ -884,32 +863,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/02/14 11:06:57 INFO mlflow.tracking.fluent: Experiment with name 'Exp_GradientBoostingClassifier_2025-02-14_11-06-57' does not exist. Creating a new experiment.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------\n",
-      "Weighted F1 Score: 0.63\n",
-      "Best Parameters:\n",
-      "learning_rate: 0.1\n",
-      "max_depth: 2\n",
-      "min_samples_leaf: 5\n",
-      "min_samples_split: 5\n",
-      "n_estimators: 100\n",
-      "subsample: 0.8\n",
-      "----------------------------------------\n",
-      "Model saved to: ..\\models\\3.3_best_gb.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not best_gb:\n",
     "\n",
@@ -1035,7 +989,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unable to load model from: ..\\models\\3.4_best_linear_svc.pkl. Error: [Errno 2] No such file or directory: '..\\\\models\\\\3.4_best_linear_svc.pkl'\n"
+      "Model loaded from: ..\\models\\3.4_best_linear_svc.pkl\n"
      ]
     }
    ],
@@ -1047,29 +1001,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/02/14 11:10:07 INFO mlflow.tracking.fluent: Experiment with name 'Exp_LinearSVC_2025-02-14_11-10-07' does not exist. Creating a new experiment.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------\n",
-      "Weighted F1 Score: 0.66\n",
-      "Best Parameters:\n",
-      "C: 0.1\n",
-      "loss: squared_hinge\n",
-      "max_iter: 1000\n",
-      "----------------------------------------\n",
-      "Model saved to: ..\\models\\3.4_best_linear_svc.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not best_linear_svc:\n",
     "\n",
