Found a convenient way of forcing notebooks to use project root as the default directory across all environments

--- a/notebooks/04_XYZ_campaign_predictive_modeling.ipynb
+++ b/notebooks/04_XYZ_campaign_predictive_modeling.ipynb
@@ -9,12 +9,12 @@
     "# Imports\n",
     "import os\n",
     "import dill\n",
-    "import mlflow\n",
-    "import mlflow.sklearn\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns \n",
     "import matplotlib.pyplot as plt\n",
+    "import mlflow\n",
+    "import mlflow.sklearn\n",
     "\n",
     "from datetime import datetime\n",
     "\n",
@@ -24,7 +24,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.svm import LinearSVC\n",
     "\n",
     "from sklearn.model_selection import cross_val_score, GridSearchCV\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, f1_score, roc_auc_score"
@@ -36,13 +36,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load dataset\n",
-    "data = pd.read_csv(\"../data/02_engineered_data.csv\")"
+    "# Directory config to project root to insure consistency across environments for project specific imports\n",
+    "from pyprojroot import here\n",
+    "os.chdir(here())\n",
+    "\n",
+    "# Custom imports\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load dataset\n",
+    "data = pd.read_csv(\"./data/02_engineered_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +168,7 @@
        "((16048, 23), (16048,), (16048,))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,11 +509,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_model(model, model_name, models_folder=\"..\\models\"):\n",
+    "def save_model(model, model_name, models_folder=\".\\models\"):\n",
     "    \"\"\"\n",
     "    Saves a trained model to the specified folder using dill.\n",
     "\n",
@@ -537,17 +550,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_model(model_name, models_folder=\"..\\\\models\"):\n",
+    "def load_model(model_name, models_folder=\".\\\\models\"):\n",
     "    \"\"\"\n",
     "    Loads a model from the specified folder using dill.\n",
     "\n",
     "    Args:\n",
     "        model_name (str): The name of the model file to load (e.g., \"best_model.pkl\").\n",
-    "        models_folder (str): The folder from which to load the model (default is \"..\\\\models\").\n",
+    "        models_folder (str): The folder from which to load the model (default is \".\\\\models\").\n",
     "\n",
     "    Returns:\n",
     "        The loaded model if successful; None otherwise.\n",
@@ -575,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,14 +622,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/02/14 12:01:58 INFO mlflow.tracking.fluent: Experiment with name 'Exp_LogisticRegression_2025-02-14_12-01-58' does not exist. Creating a new experiment.\n"
+      "2025/02/16 13:07:13 INFO mlflow.tracking.fluent: Experiment with name 'Exp_LogisticRegression_2025-02-16_13-07-12' does not exist. Creating a new experiment.\n"
      ]
     },
     {
@@ -651,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -710,14 +723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from: ..\\models\\3.2_best_rf.pkl\n"
+      "Model loaded from: .\\models\\3.2_best_rf.pkl\n"
      ]
     }
    ],
@@ -728,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -844,14 +857,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from: ..\\models\\3.3_best_gb.pkl\n"
+      "Model loaded from: .\\models\\3.3_best_gb.pkl\n"
      ]
     }
    ],
@@ -861,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -982,14 +995,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from: ..\\models\\3.4_best_linear_svc.pkl\n"
+      "Model loaded from: .\\models\\3.4_best_linear_svc.pkl\n"
      ]
     }
    ],
@@ -999,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
