--- a/notebooks/01_XYZ_campaign_data_cleaning.ipynb
+++ b/notebooks/01_XYZ_campaign_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "dc6bd2e3-6fb6-4894-8018-7405dafe63dd",
    "metadata": {},
    "outputs": [],
@@ -17,14 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "id": "76c04f32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Directory config to project root to insure consistency across environments for project specific imports\n",
+    "from pyprojroot import here\n",
+    "os.chdir(here())\n",
+    "\n",
+    "# Custom imports\n",
+    "from src.utils import save_dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "9f1b100f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load datasets\n",
-    "media_contacts = pd.read_csv(\"../data/raw/media_contacts.csv\")\n",
-    "socio_demos = pd.read_csv(\"../data/raw/socio_demos.csv\")"
+    "media_contacts = pd.read_csv(\"./data/raw/media_contacts.csv\")\n",
+    "socio_demos = pd.read_csv(\"./data/raw/socio_demos.csv\")"
    ]
   },
   {
@@ -41,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5ecbac4c",
    "metadata": {},
    "outputs": [
@@ -306,7 +321,7 @@
        "9             0.0          0.0        0.0         1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d6d1291d",
    "metadata": {},
    "outputs": [
@@ -551,7 +566,7 @@
        "max       63.000000      1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "defd39a3",
    "metadata": {},
    "outputs": [
@@ -603,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "cd4d71a1",
    "metadata": {},
    "outputs": [
@@ -628,7 +643,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6a74a437",
    "metadata": {},
    "outputs": [
@@ -682,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "bc989e2f",
    "metadata": {},
    "outputs": [
@@ -706,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "61dd006e",
    "metadata": {},
    "outputs": [],
@@ -717,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7587993e",
    "metadata": {},
    "outputs": [],
@@ -738,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2ce10cff",
    "metadata": {},
    "outputs": [
@@ -1002,7 +1017,7 @@
        "19         1-HH (male)  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "f424e358",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "7e9a3737",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1074,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f746da14",
    "metadata": {},
    "outputs": [],
@@ -1100,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "9fda9931",
    "metadata": {},
    "outputs": [
@@ -1120,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "41914230",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1157,7 @@
        "Name: count, Length: 1681, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "94c97119",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "fc135a43",
    "metadata": {},
    "outputs": [],
@@ -1192,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "2cab1d56",
    "metadata": {},
    "outputs": [],
@@ -1220,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "624276e1",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1249,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "8914266f",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "c01438ca",
    "metadata": {},
    "outputs": [
@@ -1302,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "b4a014c6",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1325,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bokr4002\\AppData\\Local\\Temp\\1\\ipykernel_23668\\1055437148.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ksbon\\AppData\\Local\\Temp\\ipykernel_22332\\1055437148.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  socio_demos['NUMBER_OF_CHILDREN'] = socio_demos['NUMBER_OF_CHILDREN'].replace({'0': 0, '1 child': 1, '2 Children': 2, '3 Kinder': 3})\n"
      ]
     }
@@ -1336,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "b4e09bd9",
    "metadata": {},
    "outputs": [
@@ -1359,7 +1374,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "2b958717",
    "metadata": {},
    "outputs": [],
@@ -1399,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "bb35ebc6",
    "metadata": {},
    "outputs": [
@@ -1438,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "57543542",
    "metadata": {},
    "outputs": [
@@ -1467,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "5207c094",
    "metadata": {},
    "outputs": [
@@ -1799,7 +1814,7 @@
        "9                   0   56               3  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "fc443427",
    "metadata": {},
    "outputs": [],
@@ -1864,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "b5332267",
    "metadata": {},
    "outputs": [],
@@ -1888,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "6839ff57",
    "metadata": {},
    "outputs": [],
@@ -1902,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "f097a67f",
    "metadata": {},
    "outputs": [
@@ -2234,7 +2249,7 @@
        "9          0.0        0.0      True  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2245,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "d84d2eb2",
    "metadata": {},
    "outputs": [
@@ -2297,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "831d66bf",
    "metadata": {},
    "outputs": [
@@ -2567,7 +2582,7 @@
        "max       63.000000  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2578,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "e37a5cac",
    "metadata": {},
    "outputs": [
@@ -2608,7 +2623,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2627,7 +2642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "693914d1",
    "metadata": {},
    "outputs": [
@@ -2635,60 +2650,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Data successfully saved to ..\\data\\01_clean_data.csv with separator ','\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:5: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "<>:5: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\bokr4002\\AppData\\Local\\Temp\\1\\ipykernel_23668\\1176887572.py:5: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "  def save_dataframe(df, filename=\"file.csv\", directory=\"..\\data\", sep=\",\", index=False):\n"
+      "✅ Data successfully saved to ./data\\01_clean_data.csv with separator ','\n"
      ]
     }
    ],
    "source": [
-    "# Saving dataset for future use\n",
-    "# os.chdir(\"..\")\n",
-    "# from src.utils import save_dataframe\n",
-    "\n",
-    "def save_dataframe(df, filename=\"file.csv\", directory=\"..\\data\", sep=\",\", index=False):\n",
-    "    \"\"\"\n",
-    "    Saves a Pandas dataframe to a CSV file.\n",
-    "\n",
-    "    Parameters:\n",
-    "    df (pd.DataFrame): Dataset to save.\n",
-    "    filename (str): The name of the output CSV file (default: 'file.csv').\n",
-    "    directory (str): The folder where the file should be saved (default: '../data').\n",
-    "    sep (str): The separator for the CSV file (default: ',').\n",
-    "    index (bool): Whether to include the index in the saved file (default: False).\n",
-    "    \n",
-    "    Returns:\n",
-    "    None\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        # Ensure the directory exists\n",
-    "        os.makedirs(directory, exist_ok=True)\n",
-    "\n",
-    "        # Full file path\n",
-    "        filepath = os.path.join(directory, filename)\n",
-    "\n",
-    "        # Save DataFrame\n",
-    "        df.to_csv(filepath, sep=sep, index=index)\n",
-    "        print(f\"✅ Data successfully saved to {filepath} with separator '{sep}'\")\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"❌ Error saving file: {e}\")\n",
-    "\n",
-    "\n",
+    "# Saving cleaned dataset for future use\n",
     "save_dataframe(data, \"01_clean_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "696466e7",
    "metadata": {},
    "outputs": [],
@@ -2699,7 +2672,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2713,7 +2686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
